more spotless updates